# cidi-os

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
src/: main.rs
