[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#as we don't have stack unwinding, we cannot implement the 
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"