cargo-features = ["per-package-target"]

[package]
name = "cidi-os"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["boot"]

[dependencies]
#update this to 0.11 at some point
bootloader = "0.10.13"

#as we don't have stack unwinding, we cannot implement the 
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
